# $Id$

2008-05-30	Denis M. Gabaidulin

	* main/Base/IsoCurrency.class.php: basic currency's list by lifter.

2008-05-27	Konstantin V. Arkhipov

	* main/DAOs/Workers/: fixed partial cached list case in
	getListByIds().

2008-05-23	Pismenny E. Dmitry

	* main/Net/Http/CurlHttpClient.class.php: can send cookie now.
	Fixed GET query construction.

2008-05-02	Konstantin V. Arkhipov

	* main/DAOs/: fetchEncapsulants is now the private method, only
	makeOnlyObject and completeObject are free for customizations now.

	* core/Form/Primitives/PrimitiveString.class.php: '0' is a valid
	string too.

2008-04-26	Denis M. Gabaidulin

	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator
	filter were merged from 0.10.

2008-04-13	Konstantin V. Arkhipov

	* global.inc.php.tpl: class cache now detects classes with errors
	during compile time.

	* core/Cache/SemaphorePool.class.php: DirectoryLocker is the default
	locker now.

2008-04-07	Konstantin V. Arkhipov

	* main/UnifiedContainer/UnifiedContainer.class.php: worker's
	serialization prevention implemented.

2008-04-03	Denis M. Gabaidulin

	* meta/classes/MetaConfiguration.class.php: lazy fetching strategy
	support for SpookedClass properties.

2008-03-31	Konstantin V. Arkhipov

	* core/Base/Time.class.php: several fixes for parsing issues were
	backported from trunk.

	* global.inc.php.tpl: added cache invalidation upon failed include
	from cached location; solves class moving case.

2008-03-30	Konstantin V. Arkhipov

	* 1.0.4 released.

2008-03-28	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php: now rotates
	queue upon overflow, it's the same strategy as in
	SharedMemorySegmentHandler.

2008-03-27	Konstantin V. Arkhipov

	* meta/builders/BusinessClassBuilder.class.php: building of custom
	create method implemented for childs of internal classes.

	* test/: now uses PHPUnit; good bye, SimpleTest.

	* core/Exceptions/SoapFault.class.php: fake exception added to prevent