@@ -79,7 +79,11 @@
 			}
 			
 			if ($assertions) {
-				TestUser::dao()->uncacheById(2);
+				// put them in cache now
+				TestUser::dao()->dropIdentityMap();
+				
+				TestUser::dao()->getById(1);
+				TestUser::dao()->getById(2);
 				
 				$this->getListByIdsTest();
 				
@@ -191,6 +195,8 @@
 		
 		private function getListByIdsTest()
 		{
+			TestUser::dao()->dropIdentityMap();
+			
 			$list = TestUser::dao()->getListByIds(array(1, 3, 2));
 			
 			$this->assertEquals(count($list), 2);
